Add chapter 4 demos and labs, and fix ch3 lab to use the separate password file

--- a/ch03_lab_statements_variables_sleep-bsky.ipynb
+++ b/ch03_lab_statements_variables_sleep-bsky.ipynb
@@ -340,7 +340,7 @@
    "metadata": {},
    "source": [
     "### Step 2: Login to Bluesky\n",
-    "To use this on your real Bluesky account, copy your [bluesky account name and login](../../appendix/making_bot_account.md) into the code below, replacing our fake bluesky name and password."
+    "To use this on your real bluesky account,copy your [bluesky account name and login](https://social-media-ethics-automation.github.io/book/bsky/appendix/making_bot_account.html) into the `bluesky_keys.py` file."
    ]
   },
   {
@@ -351,10 +351,10 @@
    "outputs": [],
    "source": [
     "# Login to Bluesky\n",
-    "# TODO: put your account name and password below\n",
+    "%run bluesky_keys.py\n",
     "\n",
     "client = Client(base_url=\"https://bsky.social\")\n",
-    "client.login(\"your_account_name.bsky.social\", \"m#5@_fake_bsky_password_$%Ds\")"
+    "client.login(handle, password)"
    ]
   },
   {
