--- a/fake_apis/fake_atproto.ipynb
+++ b/fake_apis/fake_atproto.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "991fa352-096f-4ff2-bfce-9c5b877c578b",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "226340d8-a1f7-4689-a6c2-f4f55885585c",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "4502fca7-62ab-4ac0-9215-ec4808017a97",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
+   "id": "6e84c37f-380b-40bf-90d8-aa6ba7a10708",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search_posts(options):\n",
+    "    return SimpleNamespace(\n",
+    "        posts = [\n",
+    "            SimpleNamespace(\n",
+    "                cid = \"904tjwdf093j\",\n",
+    "                record = SimpleNamespace(\n",
+    "                    text = \"Breaking news: A lovely cat took a nice long nap today!\",\n",
+    "                    created_at = \"2014-01-01\"\n",
+    "                ),\n",
+    "                author = SimpleNamespace(\n",
+    "                    handle = \"fake_user.bsky.social\"\n",
+    "                ),\n",
+    "                like_count = 23,\n",
+    "                reply_count = 7,\n",
+    "                repost_count = 5,\n",
+    "                embed = SimpleNamespace(\n",
+    "                    images = [\n",
+    "                        SimpleNamespace(\n",
+    "                            alt = \"a peaceful cat\",\n",
+    "                            thumb = \"fake_cat1.jpg\"\n",
+    "                        ),\n",
+    "                        SimpleNamespace(\n",
+    "                            alt = \"another view of a peaceful cat\",\n",
+    "                            thumb = \"fake_cat2.jpg\"\n",
+    "                        )  \n",
+    "                    ]\n",
+    "                ),\n",
+    "                uri = \"at://did:plc:fake_user/app.bsky.feed.post/fake_post_id\"\n",
+    "            ),\n",
+    "            SimpleNamespace(\n",
+    "                cid = \"604tjwdf093j\",\n",
+    "                record = SimpleNamespace(\n",
+    "                    text = \"Breaking news: Someone said a really mean thing on the internet today!\",\n",
+    "                    created_at = \"2014-01-02\"\n",
+    "                ),\n",
+    "                author = SimpleNamespace(\n",
+    "                    handle = \"pretend_user.bsky.social\"\n",
+    "                ),\n",
+    "                like_count = 23,\n",
+    "                reply_count = 7,\n",
+    "                repost_count = 5,\n",
+    "                embed = SimpleNamespace(),\n",
+    "                uri = \"at://did:plc:pretend_user/app.bsky.feed.post/fake_post_id\"\n",
+    "            ),\n",
+    "            SimpleNamespace(\n",
+    "                cid = \"45sdgjwdfdsaj\",\n",
+    "                record = SimpleNamespace(\n",
+    "                    text = \"Breaking news: Some grandparents made some yummy cookies for all the kids to share!\",\n",
+    "                    created_at = \"2014-01-03\"\n",
+    "                ),\n",
+    "                author = SimpleNamespace(\n",
+    "                    handle = \"imaginary_user.bsky.social\"\n",
+    "                ),\n",
+    "                like_count = 23,\n",
+    "                reply_count = 7,\n",
+    "                repost_count = 5,\n",
+    "                embed = SimpleNamespace(\n",
+    "                    images = [\n",
+    "                        SimpleNamespace(\n",
+    "                            alt = \"\",\n",
+    "                            thumb = \"img1.jpg\"\n",
+    "                        )\n",
+    "                    ]\n",
+    "                ),\n",
+    "                uri = \"at://did:plc:imaginary_user/app.bsky.feed.post/fake_post_id\"\n",
+    "            ),\n",
+    "            SimpleNamespace(\n",
+    "                cid = \"73gfsdgjwd534d\",\n",
+    "                record = SimpleNamespace(\n",
+    "                    text = \"Breaking news: All the horrors of the universe revealed at last!\",\n",
+    "                    created_at = \"2014-01-04\"\n",
+    "                ),\n",
+    "                author = SimpleNamespace(\n",
+    "                    handle = \"mysterious_user.bsky.social\"\n",
+    "                ),\n",
+    "                like_count = 23,\n",
+    "                reply_count = 7,\n",
+    "                repost_count = 5,\n",
+    "                embed = SimpleNamespace(\n",
+    "                    images = [\n",
+    "                        SimpleNamespace(\n",
+    "                            alt = \"eldritch horror\",\n",
+    "                            thumb = \"img2.jpg\"\n",
+    "                        )\n",
+    "                    ]\n",
+    "                ),\n",
+    "                uri = \"at://did:plc:mysterious_user/app.bsky.feed.post/fake_post_id\"\n",
+    "            ),\n",
+    "        ]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f33d76c0-996f-46ac-bf25-ff08004dc20a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_feed(options):\n",
+    "    return SimpleNamespace(\n",
+    "        feed = [\n",
+    "            SimpleNamespace(\n",
+    "                post = SimpleNamespace(\n",
+    "                    cid = \"904tjwdf093j\",\n",
+    "                    record = SimpleNamespace(\n",
+    "                        text = \"Look at my cute dog!\",\n",
+    "                        created_at = \"2014-01-01\"\n",
+    "                    ),\n",
+    "                    author = SimpleNamespace(\n",
+    "                        handle = \"fake_user.bsky.social\"\n",
+    "                    ),\n",
+    "                    like_count = 23,\n",
+    "                    reply_count = 7,\n",
+    "                    repost_count = 5,\n",
+    "                    embed = SimpleNamespace(\n",
+    "                        images = [\n",
+    "                            SimpleNamespace(\n",
+    "                                alt = \"my fluffy white dog looking confused\",\n",
+    "                                thumb = \"fake_dog1.jpg\"\n",
+    "                            ),\n",
+    "                            SimpleNamespace(\n",
+    "                                alt = \"my fluffy white dog sleeping peacefully\",\n",
+    "                                thumb = \"fake_dog2.jpg\"\n",
+    "                            )  \n",
+    "                        ]\n",
+    "                    ),\n",
+    "                    uri = \"at://did:plc:fake_user/app.bsky.feed.post/fake_post_id\"\n",
+    "                )\n",
+    "            ),\n",
+    "            SimpleNamespace(\n",
+    "                post = SimpleNamespace(\n",
+    "                    cid = \"704tjwdf093j\",\n",
+    "                    record = SimpleNamespace(\n",
+    "                        text = \"I like lizards\",\n",
+    "                        created_at = \"2014-02-01\"\n",
+    "                    ),\n",
+    "                    author = SimpleNamespace(\n",
+    "                        handle = \"pretend_user.bsky.social\"\n",
+    "                    ),\n",
+    "                    like_count = 23,\n",
+    "                    reply_count = 7,\n",
+    "                    repost_count = 5,\n",
+    "                    embed = SimpleNamespace()\n",
+    "                ),\n",
+    "                uri = \"at://did:plc:pretend_user/app.bsky.feed.post/fake_post_id\"\n",
+    "            ),\n",
+    "            SimpleNamespace(\n",
+    "                post = SimpleNamespace(\n",
+    "                    cid = \"534tjwdf093j\",\n",
+    "                    record = SimpleNamespace(\n",
+    "                        text = \"Look at my cute cat!\",\n",
+    "                        created_at = \"2014-03-01\"\n",
+    "                    ),\n",
+    "                    author = SimpleNamespace(\n",
+    "                        handle = \"imaginary_user.bsky.social\"\n",
+    "                    ),\n",
+    "                    like_count = 23,\n",
+    "                    reply_count = 7,\n",
+    "                    repost_count = 5,\n",
+    "                    embed = SimpleNamespace(\n",
+    "                        images = [\n",
+    "                            SimpleNamespace(\n",
+    "                                alt = \"\",\n",
+    "                                thumb = \"fake_cat.jpg\"\n",
+    "                            )\n",
+    "                        ]\n",
+    "                    )\n",
+    "                ),\n",
+    "                uri = \"at://did:plc:imaginary_user/app.bsky.feed.post/fake_post_id\"\n",
+    "            )\n",
+    "        ]\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "6fb61039-1a20-4ebb-a23e-6b6490803a78",
    "metadata": {},
    "outputs": [],
@@ -81,17 +263,56 @@
     "class FakeATProtoClient:\n",
     "\n",
     "    def login(self, login, password):\n",
-    "        print_info(\"Fake atproto is pretending log into your account:\" + str(login))\n",
+    "        print_info(\"Fake atproto is pretending log into your account: \" + str(login))\n",
     "        \n",
     "    def send_post(self, text):\n",
-    "        print_info(\"Fake atproto is pretending to post:\" )\n",
+    "        print_info(\"Fake atproto is pretending to post: \" )\n",
     "        print(text)\n",
     "        print()\n",
+    "    \n",
+    "    app = SimpleNamespace(\n",
+    "        bsky = SimpleNamespace(\n",
+    "            feed = SimpleNamespace(\n",
+    "                get_feed = get_feed,\n",
+    "                search_posts = search_posts\n",
+    "            )\n",
+    "        )\n",
+    "    )\n",
+    "    \n",
+    "    def get_follows(self, handle=\"\", limit=5):\n",
+    "        print(handle)\n",
+    "        if(handle==\"fake_user\"):\n",
+    "            return SimpleNamespace(\n",
+    "                follows = [SimpleNamespace(handle = \"unreal_user\"),\n",
+    "                        SimpleNamespace(handle = \"imaginary_user\"),\n",
+    "                        SimpleNamespace(handle = \"false_user\")\n",
+    "                       ]\n",
+    "            )\n",
+    "        if(handle==\"unreal_user\"):\n",
+    "            return SimpleNamespace(\n",
+    "                follows = [SimpleNamespace(handle = \"great_user\"),\n",
+    "                        SimpleNamespace(handle = \"awesome_user\"),\n",
+    "                       ]\n",
+    "            )\n",
+    "        if(handle==\"imaginary_user\"):\n",
+    "            return SimpleNamespace(\n",
+    "                follows = [SimpleNamespace(handle = \"ok_user\"),\n",
+    "                        SimpleNamespace(handle = \"awesome_user\"),\n",
+    "                       ]\n",
+    "            )\n",
+    "        if(handle==\"false_user\"):\n",
+    "            return SimpleNamespace(\n",
+    "                follows = [SimpleNamespace(handle = \"great_user\"),\n",
+    "                        SimpleNamespace(handle = \"awesome_user\"),\n",
+    "                        SimpleNamespace(handle = \"mediocre_user\"),\n",
+    "                        SimpleNamespace(handle = \"another_user\"),\n",
+    "                       ]\n",
+    "            )\n",
     "        \n",
     "    \n",
     "\n",
     "def client_creator(base_url=\"\"):\n",
-    "    print_info(\"Fake atproto is pretending to set up a client connection to:\" + base_url)\n",
+    "    print_info(\"Fake atproto is pretending to set up a client connection to: \" + base_url)\n",
     "    return FakeATProtoClient()"
    ]
   },
@@ -109,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c6b0c942-73b3-4ec8-aba9-6bf22c756902",
    "metadata": {},
    "outputs": [],
@@ -118,6 +339,14 @@
     "# we need to save the Client variable\n",
     "Client = atproto.Client"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b2ece48-799a-4770-bd30-18000f26627f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -136,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.9"
   },
   "vscode": {
    "interpreter": {
