fix ch04 demo that loads from bluesky

--- a/ch04_3_demo_data_from_platform-bsky.ipynb
+++ b/ch04_3_demo_data_from_platform-bsky.ipynb
@@ -16,16 +16,62 @@
     "Let's see what the data actually looks like from a Bluesky Post!\n",
     "\n",
     "## Helper function for atproto links\n",
-    "Before we begin though, we'll need a helper function to turn a link to a Bluesky feed into the format expected by the atproto library. You don't\n",
+    "Before we begin though, we'll need a helper function to turn a link to a Bluesky feed into the format expected by the atproto library, and get a weblink back from the atproto format link. \n",
     "\n",
-    "First we need to do our normal Bluesky login steps (and optional fake atproto step)\n",
+    "_NOTE: You don't need to worry about the details of how this works, it just is here to make the code later easier to use._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "2e04551e-089b-436e-ba63-f233df1d22be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "\n",
+    "# function to convert a feed from a weblink url to the special atproto \"at\" URI\n",
+    "def getATFeedLinkFromURL(url):\n",
+    "    \n",
+    "    # Get the user handle and feed id from the weblink url\n",
+    "    match = re.search(r'https://bsky.app/profile/([^/]+)/feed/([^/]+)', url)\n",
+    "    if not match:\n",
+    "        raise ValueError(\"Invalid Bluesky feed URL format.\")\n",
+    "    user_handle, feed_id = match.groups()\n",
+    "\n",
+    "    # Construct the at:// URI\n",
+    "    post_uri = f\"at://{user_handle}/app.bsky.feed.generator/{feed_id}\"\n",
+    "\n",
+    "    return post_uri\n",
+    "\n",
+    "# function to convert a post's special atproto \"at\" URI to a weblink url\n",
+    "def getWebLinkFromPost(post):\n",
+    "    # Get the user id and post id from the weblink url\n",
+    "    match = re.search(r'at://([^/]+)/app.bsky.feed.post/([^/]+)', post.uri)\n",
+    "    if not match:\n",
+    "        raise ValueError(\"Invalid Bluesky atproto post URL format.\")\n",
+    "    user_id, post_id = match.groups()\n",
+    "\n",
+    "    post_uri = f\"https://bsky.app/profile/{user_id}/post/{post_id}\"\n",
+    "    return post_uri"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5db7dc51-3a15-4b3a-87cf-9391dbe6c917",
+   "metadata": {},
+   "source": [
     "## Log into atproto (or fake atproto)\n",
+    "\n",
+    "Now we are ready to do our normal Bluesky login steps (and optional \n",
+    "fake atproto step)\n",
+    "\n",
     "### Load atproto library"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 128,
    "id": "1a3df841-d3c4-4c0c-8790-1e5224c351f1",
    "metadata": {},
    "outputs": [],
@@ -45,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 121,
    "id": "6d977d90-5091-470d-ab5c-8814d6b0072f",
    "metadata": {},
    "outputs": [
@@ -63,7 +109,7 @@
     }
    ],
    "source": [
-    "%run ../../fake_apis/fake_atproto.ipynb"
+    "%run fake_apis/fake_atproto.ipynb"
    ]
   },
   {
@@ -77,33 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 129,
    "id": "199ccb44-f8f1-4d23-b9f6-e06a499b2c73",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<strong style='color:darkred'>Fake atproto is pretending to set up a client connection to: https://bsky.social</strong>"
-      ],
       "text/plain": [
-       "<IPython.core.display.HTML object>"
+       "ProfileViewDetailed(did='did:plc:cqnztqpi453mwq2yzh35voz4', handle='info103-teacher.bsky.social', associated=ProfileAssociated(chat=None, feedgens=0, labeler=False, lists=0, starter_packs=0, py_type='app.bsky.actor.defs#profileAssociated'), avatar=None, banner=None, created_at='2024-04-09T19:36:16.721Z', description=None, display_name='', followers_count=1, follows_count=0, indexed_at='2024-04-09T19:36:17.310Z', joined_via_starter_pack=None, labels=[], pinned_post=None, posts_count=5, viewer=ViewerState(blocked_by=False, blocking=None, blocking_by_list=None, followed_by=None, following=None, known_followers=None, muted=False, muted_by_list=None, py_type='app.bsky.actor.defs#viewerState'), py_type='app.bsky.actor.defs#profileViewDetailed')"
       ]
      },
+     "execution_count": 129,
      "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<strong style='color:darkred'>Fake atproto is pretending log into your account: your_account_name.bsky.social</strong>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -130,11 +162,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 130,
    "id": "7850a3e0-d6f0-496e-a2dc-fa126348b85e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "atFeedLink = getATFeedLinkFromURL(\"https://bsky.app/profile/shouldhaveanimal.bsky.social/feed/aaab56iiatpdo\")\n",
+    "\n",
     "feed = client.app.bsky.feed.get_feed({'feed': 'at://did:plc:2m44csq7rgph66s2kltbypxh/app.bsky.feed.generator/aaab56iiatpdo'}).feed\n",
     "recent_post = feed[0].post"
    ]
@@ -155,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 131,
    "id": "6a47156c-496a-41b1-9696-0d04f428e3da",
    "metadata": {},
    "outputs": [
@@ -171,7 +205,7 @@
     {
      "data": {
       "text/plain": [
-       "'The post text is: Look at my cute dog!'"
+       "'The post text is: A favorite artist, @colinwoodart.bsky.social  produces this stunning fox for #JanuArty #Animal'"
       ]
      },
      "metadata": {},
@@ -201,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 132,
    "id": "eed12635-a6c5-4403-ba5f-2fc4bdd58665",
    "metadata": {},
    "outputs": [
@@ -217,7 +251,7 @@
     {
      "data": {
       "text/plain": [
-       "'The post content id is: 904tjwdf093j'"
+       "'The post content id is: bafyreicanxtzgzhfrtp5qc26xyubsxc2raieendzwqghdz22lwfsz2doe4'"
       ]
      },
      "metadata": {},
@@ -247,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 133,
    "id": "a16bcfcf-6ebe-49ae-a84a-8ad53655ea26",
    "metadata": {},
    "outputs": [
@@ -263,7 +297,7 @@
     {
      "data": {
       "text/plain": [
-       "'The author handle is: fake_user.bsky.social'"
+       "'The author handle is: sdcushing.bsky.social'"
       ]
      },
      "metadata": {},
@@ -293,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 134,
    "id": "f66d41c7-d0b2-4b8d-bb30-7d5b61fee40e",
    "metadata": {},
    "outputs": [
@@ -309,7 +343,7 @@
     {
      "data": {
       "text/plain": [
-       "'The created_at at is: 2014-01-01'"
+       "'The created_at at is: 2025-01-15T17:01:12.190Z'"
       ]
      },
      "metadata": {},
@@ -339,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 135,
    "id": "15d683fc-50ea-4603-b332-0e90487a4fa7",
    "metadata": {},
    "outputs": [
@@ -355,7 +389,7 @@
     {
      "data": {
       "text/plain": [
-       "'The number of likes is: 23'"
+       "'The number of likes is: 13'"
       ]
      },
      "metadata": {},
@@ -385,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 136,
    "id": "d1da69d1-fc64-4c44-9259-8ad6b1a8889c",
    "metadata": {},
    "outputs": [
@@ -401,7 +435,7 @@
     {
      "data": {
       "text/plain": [
-       "'The number of replies is: 7'"
+       "'The number of replies is: 1'"
       ]
      },
      "metadata": {},
@@ -431,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 137,
    "id": "187786cd-6417-4040-85ca-a8d326ed0b66",
    "metadata": {},
    "outputs": [
@@ -447,7 +481,7 @@
     {
      "data": {
       "text/plain": [
-       "'The number of reposts is: 5'"
+       "'The number of reposts is: 1'"
       ]
      },
      "metadata": {},
@@ -469,10 +503,50 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b6a925cb-93a6-463d-9a2a-ca6be19fa939",
+   "metadata": {},
+   "source": [
+    "## Link to post\n",
+    "We can use one of our helper functions to get a website url link to the post."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "6277b390-1df8-4463-988b-8d2877ce697a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The data type of the post url weblink is: str'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'The number of the post url weblink is: https://bsky.app/profile/did:plc:od6dr5oedbqr3rdwsv2oa3i6/post/3lfsajyy62s2u'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "webLink = getWebLinkFromPost(recent_post)\n",
+    "display(\"The data type of the post url weblink is: \" + type(webLink).__name__)\n",
+    "display(\"The number of the post url weblink is: \" + str(webLink))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "abc5f1e5-7579-40a7-9c8f-af7c81548aa8",
    "metadata": {},
    "source": [
-    "The submission url is a string (`str`)."
+    "The weblink url is a string (`str`)."
    ]
   },
   {
@@ -501,7 +575,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.9"
   },
   "vscode": {
    "interpreter": {
