--- a/ch04_3_demo_data_from_platform-bsky.ipynb
+++ b/ch04_3_demo_data_from_platform-bsky.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "id": "2e04551e-089b-436e-ba63-f233df1d22be",
    "metadata": {},
    "outputs": [],
@@ -33,14 +33,19 @@
     "# function to convert a feed from a weblink url to the special atproto \"at\" URI\n",
     "def getATFeedLinkFromURL(url):\n",
     "    \n",
-    "    # Get the user handle and feed id from the weblink url\n",
+    "    # Get the user did and feed id from the weblink url\n",
     "    match = re.search(r'https://bsky.app/profile/([^/]+)/feed/([^/]+)', url)\n",
     "    if not match:\n",
     "        raise ValueError(\"Invalid Bluesky feed URL format.\")\n",
     "    user_handle, feed_id = match.groups()\n",
     "\n",
+    "    resolver = IdResolver()\n",
+    "    did = resolver.handle.resolve(user_handle)\n",
+    "    if not did:\n",
+    "        raise ValueError(f'Could not resolve DID for handle \"{user_handle}\".')\n",
+    "\n",
     "    # Construct the at:// URI\n",
-    "    post_uri = f\"at://{user_handle}/app.bsky.feed.generator/{feed_id}\"\n",
+    "    post_uri = f\"at://{did}/app.bsky.feed.generator/{feed_id}\"\n",
     "\n",
     "    return post_uri\n",
     "\n",
@@ -71,13 +76,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "id": "1a3df841-d3c4-4c0c-8790-1e5224c351f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load some code called \"Client\" from the \"atproto\" library that will help us work with Bluesky\n",
-    "from atproto import Client"
+    "# Load some code called \"Client\" and \"IdResolver\" from the \"atproto\" library that will help us work with Bluesky\n",
+    "from atproto import Client, IdResolver"
    ]
   },
   {
@@ -91,23 +96,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "id": "6d977d90-5091-470d-ab5c-8814d6b0072f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<strong style='color:darkred'>Fake atproto (bsky.app) is replacing the atproto.blue library. Fake atproto doesn&#x27;t need real passwords, and prevents you from accessing real Bluesky</strong>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run fake_apis/fake_atproto.ipynb"
    ]
@@ -123,21 +115,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": null,
    "id": "199ccb44-f8f1-4d23-b9f6-e06a499b2c73",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ProfileViewDetailed(did='did:plc:cqnztqpi453mwq2yzh35voz4', handle='info103-teacher.bsky.social', associated=ProfileAssociated(chat=None, feedgens=0, labeler=False, lists=0, starter_packs=0, py_type='app.bsky.actor.defs#profileAssociated'), avatar=None, banner=None, created_at='2024-04-09T19:36:16.721Z', description=None, display_name='', followers_count=1, follows_count=0, indexed_at='2024-04-09T19:36:17.310Z', joined_via_starter_pack=None, labels=[], pinned_post=None, posts_count=5, viewer=ViewerState(blocked_by=False, blocking=None, blocking_by_list=None, followed_by=None, following=None, known_followers=None, muted=False, muted_by_list=None, py_type='app.bsky.actor.defs#viewerState'), py_type='app.bsky.actor.defs#profileViewDetailed')"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Login to Bluesky\n",
     "%run bluesky_keys.py\n",
@@ -162,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "id": "7850a3e0-d6f0-496e-a2dc-fa126348b85e",
    "metadata": {},
    "outputs": [],
    "source": [
     "atFeedLink = getATFeedLinkFromURL(\"https://bsky.app/profile/shouldhaveanimal.bsky.social/feed/aaab56iiatpdo\")\n",
     "\n",
-    "feed = client.app.bsky.feed.get_feed({'feed': 'at://did:plc:2m44csq7rgph66s2kltbypxh/app.bsky.feed.generator/aaab56iiatpdo'}).feed\n",
+    "feed = client.app.bsky.feed.get_feed({'feed': atFeedLink}).feed\n",
     "recent_post = feed[0].post"
    ]
   },
@@ -189,29 +170,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": null,
    "id": "6a47156c-496a-41b1-9696-0d04f428e3da",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The data type of the post text is: str'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'The post text is: A favorite artist, @colinwoodart.bsky.social  produces this stunning fox for #JanuArty #Animal'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(\"The data type of the post text is: \" + type(recent_post.record.text).__name__)\n",
     "display(\"The post text is: \" + recent_post.record.text)"
@@ -235,29 +197,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": null,
    "id": "eed12635-a6c5-4403-ba5f-2fc4bdd58665",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The data type of the post content id is: str'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'The post content id is: bafyreicanxtzgzhfrtp5qc26xyubsxc2raieendzwqghdz22lwfsz2doe4'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(\"The data type of the post content id is: \" + type(recent_post.cid).__name__)\n",
     "display(\"The post content id is: \" + str(recent_post.cid))"
@@ -281,29 +224,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "id": "a16bcfcf-6ebe-49ae-a84a-8ad53655ea26",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The data type of the author handle is: str'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'The author handle is: sdcushing.bsky.social'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(\"The data type of the author handle is: \" + type(recent_post.author.handle).__name__)\n",
     "display(\"The author handle is: \" + str(recent_post.author.handle))"
@@ -327,29 +251,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": null,
    "id": "f66d41c7-d0b2-4b8d-bb30-7d5b61fee40e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The data type of the post created_at is: str'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'The created_at at is: 2025-01-15T17:01:12.190Z'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(\"The data type of the post created_at is: \" + type(recent_post.record.created_at).__name__)\n",
     "display(\"The created_at at is: \" + str(recent_post.record.created_at))"
@@ -373,29 +278,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": null,
    "id": "15d683fc-50ea-4603-b332-0e90487a4fa7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The data type of the number of likes is: int'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'The number of likes is: 13'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(\"The data type of the number of likes is: \" + type(recent_post.like_count).__name__)\n",
     "display(\"The number of likes is: \" + str(recent_post.like_count))"
@@ -419,29 +305,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "id": "d1da69d1-fc64-4c44-9259-8ad6b1a8889c",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The data type of the number of replies is: int'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'The number of replies is: 1'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(\"The data type of the number of replies is: \" + type(recent_post.reply_count).__name__)\n",
     "display(\"The number of replies is: \" + str(recent_post.reply_count))"
@@ -465,29 +332,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": null,
    "id": "187786cd-6417-4040-85ca-a8d326ed0b66",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The data type of the number of reposts is: int'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'The number of reposts is: 1'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(\"The data type of the number of reposts is: \" + type(recent_post.repost_count).__name__)\n",
     "display(\"The number of reposts is: \" + str(recent_post.repost_count))"
@@ -512,29 +360,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": null,
    "id": "6277b390-1df8-4463-988b-8d2877ce697a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'The data type of the post url weblink is: str'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'The number of the post url weblink is: https://bsky.app/profile/did:plc:od6dr5oedbqr3rdwsv2oa3i6/post/3lfsajyy62s2u'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "webLink = getWebLinkFromPost(recent_post)\n",
     "display(\"The data type of the post url weblink is: \" + type(webLink).__name__)\n",
