fix link to fake_atproto in ch03 lab

--- a/ch03_lab_statements_variables_sleep-bsky.ipynb
+++ b/ch03_lab_statements_variables_sleep-bsky.ipynb
@@ -313,25 +313,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "d116f0ad-b143-4cf3-9020-8f72e7bf1cb8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<strong style='color:darkred'>Fake tweepy is replacing the tweepy library. Fake Tweepy doesn&#x27;t need real passwords, and prevents you from accessing real twitter</strong>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%run ../../fake_apis/fake_atproto.ipynb"
+    "%run fake_apis/fake_atproto.ipynb"
    ]
   },
   {
