Add reply bot demo, and chapter 8 data files

--- a/fake_apis/fake_atproto.ipynb
+++ b/fake_apis/fake_atproto.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "991fa352-096f-4ff2-bfce-9c5b877c578b",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "226340d8-a1f7-4689-a6c2-f4f55885585c",
    "metadata": {},
    "outputs": [],
@@ -49,35 +49,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4502fca7-62ab-4ac0-9215-ec4808017a97",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<strong style='color:darkred'>Fake atproto (bsky.app) is replacing the atproto.blue library. Fake atproto doesn&#x27;t need real passwords, and prevents you from accessing real Bluesky</strong>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "print_info(\"Fake atproto (bsky.app) is replacing the atproto.blue library. Fake atproto doesn't need real passwords, and prevents you from accessing real Bluesky\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "id": "692a06ff-3249-43d0-a9f5-f959f5ea8c30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bot_handle = \"mybotname.bsky.social\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33d81f16-76e4-407e-a040-c7a54072e0a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reply_counter = 0\n",
+    "\n",
+    "replies = [\n",
+    "    \"jump\",\n",
+    "    \"do something horrible!\",\n",
+    "    \"fly\",\n",
+    "    \"do something horrible!\",\n",
+    "    \"stop talking. But that doesn't mean I won't say horrible things like: I hate everybody!\"\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c819f456-ba7e-46a9-a106-8b41ca9ddec3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6e84c37f-380b-40bf-90d8-aa6ba7a10708",
    "metadata": {},
    "outputs": [],
    "source": [
     "def search_posts(options):\n",
+    "    global reply_counter\n",
+    "    \n",
+    "    if \"mentions\" in options: # trolling reply bot search\n",
+    "        reply_return = SimpleNamespace(\n",
+    "            posts = [\n",
+    "                SimpleNamespace(\n",
+    "                    cid = \"0945j34oij5\",\n",
+    "                    record = SimpleNamespace(\n",
+    "                        text = \"Hi @\"+bot_handle+\", please \" + replies[reply_counter],\n",
+    "                        created_at = \"2014-01-01\"\n",
+    "                    ),\n",
+    "                    author = SimpleNamespace(\n",
+    "                        handle = \"fake_user.bsky.social\"\n",
+    "                    ),\n",
+    "                    like_count = 0,\n",
+    "                    reply_count = 0,\n",
+    "                    repost_count = 0,\n",
+    "                    uri = \"at://did:plc:fake_user/app.bsky.feed.post/fake_post_id\"\n",
+    "                )\n",
+    "            ]\n",
+    "        )\n",
+    "        reply_counter += 1\n",
+    "        return reply_return\n",
     "    return SimpleNamespace(\n",
     "        posts = [\n",
     "            SimpleNamespace(\n",
@@ -171,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f33d76c0-996f-46ac-bf25-ff08004dc20a",
    "metadata": {},
    "outputs": [],
@@ -187,7 +233,8 @@
     "                        created_at = \"2014-01-01\"\n",
     "                    ),\n",
     "                    author = SimpleNamespace(\n",
-    "                        handle = \"fake_user.bsky.social\"\n",
+    "                        handle = \"fake_user.bsky.social\",\n",
+    "                        did = \"93j45jg9ej5gjt\"\n",
     "                    ),\n",
     "                    like_count = 23,\n",
     "                    reply_count = 7,\n",
@@ -215,14 +262,16 @@
     "                        created_at = \"2014-02-01\"\n",
     "                    ),\n",
     "                    author = SimpleNamespace(\n",
-    "                        handle = \"pretend_user.bsky.social\"\n",
+    "                        handle = \"pretend_user.bsky.social\",\n",
+    "                        did = \"75n4tk5gn4oi\"\n",
     "                    ),\n",
     "                    like_count = 23,\n",
     "                    reply_count = 7,\n",
     "                    repost_count = 5,\n",
-    "                    embed = SimpleNamespace()\n",
-    "                ),\n",
-    "                uri = \"at://did:plc:pretend_user/app.bsky.feed.post/fake_post_id\"\n",
+    "                    embed = SimpleNamespace(),\n",
+    "                    uri = \"at://did:plc:pretend_user/app.bsky.feed.post/fake_post_id\"\n",
+    "                )\n",
+    "                \n",
     "            ),\n",
     "            SimpleNamespace(\n",
     "                post = SimpleNamespace(\n",
@@ -232,7 +281,8 @@
     "                        created_at = \"2014-03-01\"\n",
     "                    ),\n",
     "                    author = SimpleNamespace(\n",
-    "                        handle = \"imaginary_user.bsky.social\"\n",
+    "                        handle = \"imaginary_user.bsky.social\",\n",
+    "                        did = \"5kj45nkj4n6kj45n\"\n",
     "                    ),\n",
     "                    like_count = 23,\n",
     "                    reply_count = 7,\n",
@@ -244,9 +294,9 @@
     "                                thumb = \"fake_cat.jpg\"\n",
     "                            )\n",
     "                        ]\n",
-    "                    )\n",
-    "                ),\n",
-    "                uri = \"at://did:plc:imaginary_user/app.bsky.feed.post/fake_post_id\"\n",
+    "                    ),\n",
+    "                    uri = \"at://did:plc:imaginary_user/app.bsky.feed.post/fake_post_id\"\n",
+    "                )\n",
     "            )\n",
     "        ]\n",
     "    )"
@@ -254,7 +304,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "id": "0a9c3177-392b-4168-a03e-fa60d40436ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_profile(options):\n",
+    "    if(options[\"actor\"] == \"93j45jg9ej5gjt\"):\n",
+    "        return SimpleNamespace(\n",
+    "            handle = \"fake_user.bsky.social\",\n",
+    "            display_name = \"Fake User\",\n",
+    "            created_at = \"2024-1-01\",\n",
+    "            did = \"93j45jg9ej5gjt\",\n",
+    "            followers_count = 75,\n",
+    "            follows_count = 345,\n",
+    "            posts_count = 13,\n",
+    "            avatar = \"fake_user_profile.jpg\",\n",
+    "            banner = \"fake_user_banner.jpg\",\n",
+    "            description = \"I am a fake user!\"\n",
+    "        )\n",
+    "    elif(options[\"actor\"] == \"75n4tk5gn4oi\"):\n",
+    "        return SimpleNamespace(\n",
+    "            handle = \"pretend_user.bsky.social\",\n",
+    "            display_name = \"Pretend User\",\n",
+    "            created_at = \"2024-3-02\",\n",
+    "            did = \"75n4tk5gn4oi\",\n",
+    "            followers_count = 2,\n",
+    "            follows_count = 1323,\n",
+    "            posts_count = 1,\n",
+    "            avatar = \"pretend_user_profile.jpg\",\n",
+    "            banner = \"pretend_user_banner.jpg\",\n",
+    "            description = \"I am a pretend user!\"\n",
+    "        )\n",
+    "    elif(options[\"actor\"] == \"5kj45nkj4n6kj45n\"):\n",
+    "        return SimpleNamespace(\n",
+    "            handle = \"imaginary_user.bsky.social\",\n",
+    "            display_name = \"Imaginary User\",\n",
+    "            created_at = \"2022-1-01\",\n",
+    "            did = \"5kj45nkj4n6kj45n\",\n",
+    "            followers_count = 50,\n",
+    "            follows_count = 60,\n",
+    "            posts_count = 355,\n",
+    "            avatar = \"imaginary_user_profile.jpg\",\n",
+    "            banner = \"imaginary_user_banner.jpg\",\n",
+    "            description = \"I am an imaginary user!\"\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6fb61039-1a20-4ebb-a23e-6b6490803a78",
    "metadata": {},
    "outputs": [],
@@ -265,7 +364,7 @@
     "    def login(self, login, password):\n",
     "        print_info(\"Fake atproto is pretending log into your account: \" + str(login))\n",
     "        \n",
-    "    def send_post(self, text):\n",
+    "    def send_post(self, text, reply_to = None):\n",
     "        print_info(\"Fake atproto is pretending to post: \" )\n",
     "        print(text)\n",
     "        print()\n",
@@ -275,8 +374,15 @@
     "            feed = SimpleNamespace(\n",
     "                get_feed = get_feed,\n",
     "                search_posts = search_posts\n",
+    "            ),\n",
+    "            actor = SimpleNamespace(\n",
+    "                get_profile = get_profile\n",
     "            )\n",
     "        )\n",
+    "    )\n",
+    "\n",
+    "    me = SimpleNamespace(\n",
+    "        handle = bot_handle\n",
     "    )\n",
     "    \n",
     "    def get_follows(self, handle=\"\", limit=5):\n",
@@ -318,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "d55561c8-26ff-4ef9-9397-f24b99385187",
    "metadata": {},
    "outputs": [],
@@ -330,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "c6b0c942-73b3-4ec8-aba9-6bf22c756902",
    "metadata": {},
    "outputs": [],
@@ -346,7 +452,20 @@
    "id": "6b2ece48-799a-4770-bd30-18000f26627f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Make ID Resolver\n",
+    "\n",
+    "def resolve_handle(user_handle):\n",
+    "    #print_info(\"Fake atproto is pretending to look up user handle: \" + user_handle)\n",
+    "    return user_handle\n",
+    "\n",
+    "def IdResolver():\n",
+    "    return SimpleNamespace(\n",
+    "        handle = SimpleNamespace(\n",
+    "            resolve = resolve_handle\n",
+    "        )\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
@@ -365,7 +484,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.5"
   },
   "vscode": {
    "interpreter": {
