--- a/ch07_3_demo_reply_bot-bsky.ipynb
+++ b/ch07_3_demo_reply_bot-bsky.ipynb
@@ -125,11 +125,9 @@
     "### find my latest mention\n",
     "We need to find the latest bluesky post that mentions us and match our expected pattern.\n",
     "\n",
-    "We do this by first finding our user handle, then requesting \n",
+    "We do this by first doing a search for posts that match our expected pattern and mention our handle (to make sure we don't interact with any user that doesn't want us to).\n",
     "\n",
-    "We do this by looking in our reddit inbox for messages (we limit it to one, since we just want the latest).\n",
-    "\n",
-    "It doesn't directly give us the one message (instead it is in something called an \"iterator\"), but we can use the `next` function to get the message out.\n",
+    "We then get the first mention (index 0), which should be the latest mention.\n",
     "\n",
     "We then display the subject of the message just so we can see that it found something.."
    ]
@@ -150,7 +148,10 @@
     "if(len(mentions) < 1):\n",
     "    print(\"Error: Could not find matching mentions!\")\n",
     "    \n",
-    "latest_mention = mentions[0]"
+    "latest_mention = mentions[0]\n",
+    "\n",
+    "# display the text of the post, so we can see what we found\n",
+    "display(\"latest post text: \" + str(latest_mention.record.text))"
    ]
   },
   {
@@ -235,6 +236,9 @@
     "    \n",
     "latest_mention = mentions[0]\n",
     "\n",
+    "# display the text of the post, so we can see what we found\n",
+    "display(\"latest post text: \" + str(latest_mention.record.text))\n",
+    "\n",
     "\n",
     "# check if the mention text starts with our set phrase\n",
     "if latest_mention.record.text.startswith(expected_pattern):\n",
@@ -299,7 +303,7 @@
     "    \n",
     "latest_mention = mentions[0] \n",
     "\n",
-    "# display the subject and body of the message, so we can see what we found\n",
+    "# display the text of the post, so we can see what we found\n",
     "display(\"latest post text: \" + str(latest_mention.record.text))"
    ]
   },
@@ -385,7 +389,7 @@
     "    \n",
     "latest_mention = mentions[0] \n",
     "\n",
-    "# display the subject and body of the message, so we can see what we found\n",
+    "# display the text of the post, so we can see what we found\n",
     "display(\"latest post text: \" + str(latest_mention.record.text))\n",
     "\n",
     "\n",
@@ -464,7 +468,7 @@
     "    \n",
     "latest_mention = mentions[0] \n",
     "\n",
-    "# display the subject and body of the message, so we can see what we found\n",
+    "# display the text of the post, so we can see what we found\n",
     "display(\"latest post text: \" + str(latest_mention.record.text))\n",
     "\n",
     "\n",
