fix bluesky login for a4

--- a/a4_political_bias-bsky.ipynb
+++ b/a4_political_bias-bsky.ipynb
@@ -25,7 +25,7 @@
     "from atproto import Client\n",
     "%run bluesky_keys.py\n",
     "client = Client(base_url=\"https://bsky.social\")\n",
-    "client.login(username, password)"
+    "client.login(handle, password)"
    ]
   },
   {
