--- a/a4_political_bias-bsky.ipynb
+++ b/a4_political_bias-bsky.ipynb
@@ -174,6 +174,7 @@
     "# It has a bunch of checks to timeout on DNS connections and reads, and tries 3 times to find the URL\n",
     "# If it fails, it just gives up and gives you the short url\n",
     "import requests\n",
+    "from time import sleep\n",
     "\n",
     "def get_full_url(short_url, timeout=(2, 5), retries=3):\n",
     "    for attempt in range(retries):\n",
@@ -252,7 +253,7 @@
     "        full_url = get_full_url(url)\n",
     "        print(full_url)\n",
     "        # try to find the source website in our dataset\n",
-    "        matching_site = find_matching_site(url)\n",
+    "        matching_site = find_matching_site(full_url)\n",
     "\n",
     "         # if we found the matching site, then we have info for it\n",
     "        if(matching_site):\n",
