a4: fix sleep in get_full_url helper function

--- a/a4_political_bias-bsky.ipynb
+++ b/a4_political_bias-bsky.ipynb
@@ -184,7 +184,7 @@
     "        except requests.Timeout:\n",
     "            print(f\"Timeout on attempt {attempt + 1} for URL: {short_url}\")\n",
     "            if attempt < retries - 1:\n",
-    "                time.sleep(1)  # Optional: wait before retrying\n",
+    "                sleep(1)  # Optional: wait before retrying\n",
     "        except requests.RequestException as e:\n",
     "            print(f\"Error retrieving URL: {e}\")\n",
     "            return short_url\n",
