change virality demo to world news

--- a/ch12_1_demo_virality.ipynb
+++ b/ch12_1_demo_virality.ipynb
@@ -67,8 +67,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Look up the subreddit \"movies\", then find the \"hot\" list, getting up to 1 submission\n",
-    "submissions = reddit.subreddit(\"movies\").hot(limit=1)\n",
+    "# Look up the subreddit \"worldnews\", then find the \"hot\" list, getting up to 1 submission\n",
+    "submissions = reddit.subreddit(\"worldnews\").hot(limit=1)\n",
     "\n",
     "# get the first submission off the list (should only be one anyway)\n",
     "latest_submission = next(submissions) \n",
@@ -150,8 +150,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Look up the subreddit \"cuteanimals\", then find the \"hot\" list, getting up to 1 submission\n",
-    "submissions = reddit.subreddit(\"movies\").hot(limit=10)\n",
+    "# Look up the subreddit \"worldnews\", then find the \"hot\" list, getting up to 1 submission\n",
+    "submissions = reddit.subreddit(\"worldnews\").hot(limit=10)\n",
     "\n",
     "# get the first submission off the list (should only be one anyway)\n",
     "submissions_list = list(submissions) \n",
