fix image link in 14_3

--- a/ch14_3_demo_recursion_real-bsky.ipynb
+++ b/ch14_3_demo_recursion_real-bsky.ipynb
@@ -250,7 +250,7 @@
     "## Finding post IDs and testing our code\n",
     "In order to test it out, we need to find a link to a Bluesky post with replies. Once you find the post, find the 'Copy Link to Post' option to get a web url for the post.\n",
     "\n",
-    "![Bluesky Post. The three dot \"Open post options menu\" is opened, and from there the \"Copy Link to Post\" option is selected.](bsky_copy_link.png)\n",
+    "![Bluesky Post. The three dot \"Open post options menu\" is opened, and from there the \"Copy Link to Post\" option is selected.](imgs/bsky_copy_link.png)\n",
     "\n",
     "It should be something like: [https://bsky.app/profile/realgdt.bsky.social/post/3lihunicmds2y](https://bsky.app/profile/realgdt.bsky.social/post/3lihunicmds2y)\n",
     "\n",
