fix typo in photo posting

--- a/demo_post_a_photo.ipynb
+++ b/demo_post_a_photo.ipynb
@@ -73,16 +73,8 @@
     "client.send_images(\n",
     "   \"Testing uploading an image to Bluesky\", \n",
     "   images = [img_data],\n",
-    "   image_alt = [\"Bluesky logo with the text 'Test Upload' overlayed on it.\"])"
+    "   image_alts = [\"Bluesky logo with the text 'Test Upload' overlayed on it.\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b88c1494-6bfc-430c-a8a9-f78117746bb2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
