--- a/demo_post_image_quote_from_csv.ipynb
+++ b/demo_post_image_quote_from_csv.ipynb
@@ -124,7 +124,7 @@
     "client.send_images(\n",
     "   quote, \n",
     "   images = [img_data],\n",
-    "   image_alt = [image_alt_text])"
+    "   image_alts = [image_alt_text])"
    ]
   },
   {
