fix reference to inspirational quotes file for demo

--- a/demo_post_a_quote_from_csv.ipynb
+++ b/demo_post_a_quote_from_csv.ipynb
@@ -65,7 +65,7 @@
     "import pandas as pd\n",
     "\n",
     "# load the media_info.csv file\n",
-    "quotes_df = pd.read_csv('quotes.csv')\n",
+    "quotes_df = pd.read_csv('inspirational_quotes.csv')\n",
     "\n",
     "# get a list of the sites we have information for in the media_info.csv\n",
     "quotes = quotes_df['quotes']"
